--- a/shard.yml
+++ b/shard.yml
@@ -9,5 +9,9 @@ license: MIT
 dependencies:
   crom:
     git: ../../crom.cr
+
   mysql:
     github: crystal-lang/crystal-mysql
+
+  query-builder:
+    github: izniburak/query-builder
