--- a/shard.yml
+++ b/shard.yml
@@ -8,7 +8,7 @@ license: MIT
 
 dependencies:
   crom:
-    git: ../../crom.cr
+    git: TechMagister/crom.cr
 
   mysql:
     github: crystal-lang/crystal-mysql
